--- a/src/index.html
+++ b/src/index.html
@@ -14,14 +14,17 @@
 <body>
     <main>
         <h1>Sorteador</h1>
-        <form>
+        <form id="form-sorteador">
             <div>
                 <label for="numero-maximo">Número Máximo</label>
-                <input type="number" id="numero-maximo">
+                <input type="number" id="numero-maximo" required min="2" value="2" step="1">
             </div>
             <button type="submit">Sortear número</button>
         </form>
     </main>
-    <!-- teste -->
+    <div class="resultado">
+        O número sorteado foi: <spam id="resultado-valor"></spam>
+    </div>
+    <script src="@@ENDERECO_DO_JS"></script> 
 </body>
 </html>
